-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.12.2, 5.15.1
-
None
-
Microsoft Visual Studio 2019, 16.7.4
-
-
254b3ef97a01b9a2b5ccdd27a9e9a3d359244a02 (qt/qtbase/5.15)
When including any header that transitively includes <QVector>, a C4619 warning is raised:
D:\ext\Qt\5.12.2\msvc2017_64\include\QtCore\qvector.h(319,12): warning C4619: #pragma warning: there is no warning number '4345' (compiling source file XXX)
The offending line is
```
#ifdef Q_CC_MSVC
// behavior change: an object of POD type constructed with an initializer of the form ()
// will be default-initialized
- pragma warning ( push )
- pragma warning ( disable : 4345 )
- pragma warning(disable : 4127) // conditional expression is constant
#endif
```
Warning 4345 does not exist anymore: https://social.msdn.microsoft.com/Forums/en-US/2a7e65d6-b6fa-4963-b969-8a8d5d5190e8/what-happened-to-warning-c4345-quotbehavior-change-an-object-of-pod-type-constructed-with-an?forum=vclanguage
| For Gerrit Dashboard: QTBUG-87047 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 315793,2 | Don't disable non-existent MSVC warning C4345 | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |