Don't disable non-existent MSVC warning C4345

This warning was removed in MSVC 2013:
https://docs.microsoft.com/en-us/previous-versions/wewb47ee(v=vs.120)

Disabling it causes warning C4619: #pragma warning: there is no warning number '4345'

Doesn't apply to dev, since it was already removed in b42a2b3c3338a320a438bc081cb885fd4547f01f

Fixes: QTBUG-87047
Change-Id: Ie89743d0e335a7ccded12c0265967fca49c95e70
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>