src/corelib/tools/qvector.h
@@ -337,7 +337,6 @@ QVector(InputIterator, InputIterator) -> QVector<ValueType>;
 // behavior change: an object of POD type constructed with an initializer of the form ()
 // will be default-initialized
 #   pragma warning ( push )
-#   pragma warning ( disable : 4345 )
 #   pragma warning(disable : 4127) // conditional expression is constant
 #endif
 
